<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    tools:context=".LoginActivity">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
        <!--android:theme="@style/WhiteProgress"-->


<ScrollView
   android:id="@+id/login_form"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:layout_gravity="center"
   android:layout_weight="1">

   <LinearLayout
       android:id="@+id/email_login_form"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center_vertical"
       android:orientation="vertical">

       <android.support.design.widget.TextInputLayout
           android:id="@+id/float_label_user_id"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
       <!--android:theme="@style/LoginTextField">-->

      <EditText
          android:id="@+id/user_id"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/prompt_user_id"
          android:maxLines="1"
          android:textColor="@color/colorPrimary"
          android:textColorHint="@color/colorPrimary" />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/float_label_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
       <!--android:theme="@style/LoginTextField"
      app:passwordToggleEnabled="true">-->

      <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/prompt_password"

     android:imeActionLabel="@string/action_sign_in_short"
     android:imeOptions="actionUnspecified"
     android:inputType="textPassword"
     android:maxLines="1"
     android:textColor="@color/colorPrimary"
     android:textColorHint="@android:color/white" />
      <!--android:imeActionId="@+id/login"-->

</android.support.design.widget.TextInputLayout>

<Button
     android:id="@+id/email_sign_in_button"
     android:background="@color/colorPrimaryDark"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
     android:text="@string/action_sign_in"
     android:textColor="@color/colorAccent"
     android:textStyle="bold"/>

<Button
    android:id="@+id/new_user"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/new_user"
    android:textColor="@color/colorAccent"
    android:textStyle="bold"/>

</LinearLayout>
</ScrollView>
</LinearLayout>